# interlock-smartcontracts

./: .gitattributes  .gitignore  INTRblockchainOptionCompare.xlsx  README.md  SECURITY.md  tsconfig.json
ARCHIVE/solana-contracts-OLD/ilocksupreme/: Cargo.toml  FLAGS.txt  blairmunroakusa.braindump.txt
alephzero-contracts/ilock-mvp/: Cargo.toml  lib.rs
alephzero-contracts/ilock-mvp/client/: README.md  do.approve.js  do.checkTime.js  do.decrementCirculation.js  do.mint.js  do.mintAccessnft.js  do.renounceOwnership.js  do.setAuthenticated.js  do.setNotAuthenticated.js  do.transfer.js  do.transferFrom.js  do.transferOwnership.js  do.updateContract.js  get.balanceOf.js  get.getAttribute.js  get.ownerOf.js  get.totalSupply.js  queryContract.js  sendTransaction.js  subscribe.js  test.testingIncrementMonth.js
alephzero-contracts/ilock-mvp/client/ARCHIVE/: lib.ilockaccess.js
alephzero-contracts/ilockmvp/: .rustdoc_fingerprint.json  Cargo.toml  README.md  lib.rs
alephzero-contracts/ilockmvp/client/: queryContract.js  sendTransaction.js
alephzero-contracts/ilockmvp/doc/: sidebar-items.js
alephzero-contracts/ilockmvp/doc/ilockmvp/: constant.ADVISORS.html  constant.CONCATP_NHPMWYD3NJA.html  constant.CONCAT_ARR.html  constant.CONCAT_STR.html  constant.CONSTRUCTOR_0.html  constant.DECIMALS_POWER10.html  constant.EARLY_BACKERS.html  constant.ID_LENGTH.html  constant.MESSAGE_10.html  constant.MESSAGE_11.html  constant.MESSAGE_16.html  constant.MESSAGE_19.html  constant.MESSAGE_2.html  constant.MESSAGE_20.html  constant.MESSAGE_21.html  constant.MESSAGE_25.html  constant.MESSAGE_27.html  constant.MESSAGE_3.html  constant.MESSAGE_30.html  constant.MESSAGE_32.html  constant.MESSAGE_35.html  constant.MESSAGE_4.html  constant.MESSAGE_7.html  constant.OUTLIER_VENTURES.html  constant.PARTNERS.html  constant.POOL_KEY.html  constant.PUBLIC_SALE.html  constant.REWARD_KEY.html  constant.TOKEN_DECIMALS.html  constant.TOKEN_NAME.html  constant.TOKEN_SYMBOL.html  constant.VEST_KEY.html  enum.__ink_ConstructorDecoder.html  enum.__ink_EventBase.html  fn.__ink_generate_metadata.html  fn.deploy.html  fn.push_contract.html  sidebar-items.js  struct.Approval.html  struct.CallBuilder.html  (+10 more)
alephzero-contracts/ilocknft/ilockbouncerlicense/: Cargo.toml  lib.rs
alephzero-contracts/nft/access/: Cargo.toml  convert.js  lib.rs  test.sh
alephzero-contracts/nft/access/client/: do.approve.js  do.mint.js  do.mintAccessnft.js  do.renounceOwnership.js  do.setAuthenticated.js  do.setNotAuthenticated.js  do.transfer.js  do.transferOwnership.js  do.updateContract.js  get.balanceOf.js  get.getAttribute.js  get.getCap.js  get.owner.js  get.ownerOf.js  get.userCollection.js  package.json
alephzero-contracts/staking/application/: Cargo.toml  lib.rs
contract-application/: Cargo.toml  lib.rs
contract-application/client/: queryContract.js
contract-application/client/ARCHIVE/: contractshell.js
contract_application_ink/: Cargo.toml  README.md  lib.rs
contract_application_ink/docs/: crates.js  help.html  search-index.js  settings.html  source-files.js
contract_application_ink/docs/application/: all.html  index.html
contract_application_ink/docs/application/application/: constant.CONSTRUCTOR_0.html  constant.MESSAGE_0.html  constant.MESSAGE_1.html  constant.MESSAGE_2.html  constant.PORT.html  enum.__ink_ConstructorDecoder.html  enum.__ink_MessageDecoder.html  fn.__ink_generate_metadata.html  fn.call.html  fn.deploy.html  fn.push_contract.html  index.html  struct.Application.html  struct.ApplicationRef.html  struct.CallBuilder.html  struct.Check.html  type.AccountId.html  type.Balance.html  type.BlockNumber.html  type.Environment.html  type.Hash.html  type.Timestamp.html
contract_application_ink/docs/implementors/scale_info/: trait.TypeInfo.js
contract_application_ink/docs/src/application/: lib.rs.html
contract_ilockmvp/: AUDITNOTES.md  Cargo.toml  README.md  lib.rs  rust-toolchain.toml  tests_e2e.rs  tests_unit.rs
contract_ilockmvp/docs/: help.html  search-index.js
contract_ilockmvp/docs/ilockmvp/: all.html  index.html
contract_ilockmvp/docs/ilockmvp/ilockmvp/: constant.ADVISORS.html  constant.APP_KEY.html  constant.ARR_LEN.html  constant.COMMUNITY.html  constant.CONCATP_NHPMWYD3NJA.html  constant.CONCAT_ARR.html  constant.CONCAT_STR.html  constant.CONSTRUCTOR_0.html  constant.DECIMALS_POWER10.html  constant.EARLY_BACKERS.html  constant.FOUNDATION.html  constant.ID_LENGTH.html  constant.MESSAGE_0.html  constant.MESSAGE_1.html  constant.MESSAGE_10.html  constant.MESSAGE_11.html  constant.MESSAGE_12.html  constant.MESSAGE_13.html  constant.MESSAGE_14.html  constant.MESSAGE_15.html  constant.MESSAGE_16.html  constant.MESSAGE_17.html  constant.MESSAGE_18.html  constant.MESSAGE_19.html  constant.MESSAGE_2.html  constant.MESSAGE_20.html  constant.MESSAGE_21.html  constant.MESSAGE_22.html  constant.MESSAGE_23.html  constant.MESSAGE_24.html  constant.MESSAGE_25.html  constant.MESSAGE_26.html  constant.MESSAGE_27.html  constant.MESSAGE_28.html  constant.MESSAGE_29.html  constant.MESSAGE_3.html  constant.MESSAGE_30.html  constant.MESSAGE_31.html  constant.MESSAGE_32.html  constant.MESSAGE_33.html  (+55 more)
contract_ilockmvp/docs/implementors/scale_info/: trait.TypeInfo.js
contract_ilockmvp/docs/src/ilockmvp/: lib.rs.html
contract_uanft/: AUDITNOTES.md  Cargo.toml  README.md  lib.rs  tests_e2e.rs
contract_uanft/client/: get.collectionId.js  get.owner.js  get.totalSupply.js
contract_uanft/docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
contract_uanft/docs/implementors/scale_info/: trait.TypeInfo.js
contract_uanft/docs/src/uanft/: lib.rs.html
contract_uanft/docs/uanft/: all.html  index.html  sidebar-items.js
contract_uanft/docs/uanft/psp34_nft/: constant.ACCESS_KEY.html  constant.APP_KEY.html  constant.ARR_LEN.html  constant.CONCATP_NHPMWYD3NJA.html  constant.CONCAT_ARR.html  constant.CONCAT_STR.html  constant.CONSTRUCTOR_0.html  constant.MESSAGE_0.html  constant.MESSAGE_1.html  constant.MESSAGE_10.html  constant.MESSAGE_11.html  constant.MESSAGE_12.html  (+67 more)
(+14932 files in other folders)
