[package]
name = "application"
version = "0.1.0"
authors = ["Interlock Network, Blair Munro <blairmunroakusa@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "~4.0.0", default-features = false}

ilockmvp = { path = "../../ilockmvp", default-features = false, features = ["ink-as-dependency"] }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

[lib]
name = "application"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",

    "ilockmvp/std"
]
ink-as-dependency = []

