[package]
name = "ilocksupreme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.9.4"
thiserror = "1.0.24"
arrayref = "0.3.6"
bit-vec = "0.6"
ilocksupreme_wormhole = { path = "../ilocksupreme_wormhole/programs/ilocksupreme_wormhole" }


[lib]
crate-type = ["cdylib", "lib"]
