[package]
name = "interlock_access_nft"
version = "0.0.1"
authors = ["Blair Munro <blairmunroakusa@gmail.com>, ArtZero <admin@artzero.io>"]
edition = "2021"

[dependencies]
# This unstable ink commit is required by Openbrush
ink = { version = "~4.0.0", default-features = false}


ilockmvp = { path = "../../ilockmvp", default-features = false, features = ["ink-as-dependency"] }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

openbrush = { tag = "3.0.0", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["psp34", "ownable"] }

[lib]
name = "interlock_access_nft"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    "rlib"
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",

    "openbrush/std",
    "ilockmvp/std"
]
ink-as-dependency = []

[profile.release]
overflow-checks = false
