[package]
name = "application"
version = "0.1.0"
authors = ["Interlock Network, Blair Munro <blairmunroakusa@gmail.com>"]
edition = "2021"

[dependencies]
ink_primitives = { version = "=3.3.1", default-features = false }
ink_metadata = { version = "=3.3.1", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "=3.3.1", default-features = false }
ink_storage = { version = "=3.3.1", default-features = false }
ink_lang = { version = "=3.3.1", default-features = false }
ink_prelude = { version = "=3.3.1", default-features = false }
ink_allocator = { version = "=3.3.1", default-features = false }
ink_lang_codegen = { version = "=3.3.1", default-features = false }
ink_lang_ir = { version = "=3.3.1", default-features = false }
ink_lang_macro = { version = "=3.3.1", default-features = false }
ink_storage_derive = { version = "=3.3.1", default-features = false }

ilockmvp = { path = "../../ilockmvp", default-features = false, features = ["ink-as-dependency"] }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

[lib]
name = "application"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
	"rlib"
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",

    "ilockmvp/std"
]
ink-as-dependency = []
